--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 ureq = {version = "2.5.0"}
 regex = {version = "1.3.3"}
+fstrings = {version = "0.2.3"}
 
 [profile.release]
 debug = 1
