--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 ureq = {version = "2.5.0"}
 regex = {version = "1.3.3"}
 fstrings = {version = "0.2.3"}
+clap = { version = "4.0", features = ["derive"] }
 
 [profile.release]
 debug = 1
